k8s/04-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: prod-ecommerce
  labels:
    app: postgres-db
    tier: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
  selector:
    app: postgres-db

---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
  namespace: prod-ecommerce
  labels:
    app: flask-api
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      name: api-http
  selector:
    app: flask-api

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend-service
  namespace: prod-ecommerce
  labels:
    app: nginx-frontend
    tier: presentation
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: nginx-frontend
